# quantfoot

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_PROMPT.md  LIVE_SERVICE_LIFECYCLE.md  PLAYER_SERVICE_DDD.md  README.md
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/services/: playersApi.ts
apps/web/src/types/: player.ts  team.ts
data-pipeline/: DBT_VS_ALEMBIC.md  DBT_VS_SQL.md  Dockerfile  MART_ROBUSTNESS.md  README.md  main.py  pyproject.toml
data-pipeline/dbt_project/: build_robust_marts.sh  dbt_project.yml  profiles.yml
data-pipeline/dbt_project/macros/: add_mart_constraints.sql  validate_constraints.sql
data-pipeline/dbt_project/models/marts/: fixtures.sql  players.sql  schema.yml  teams.sql
data-pipeline/dbt_project/models/staging/: sources.yml  stg_fixtures.sql  stg_leagues.sql  stg_players.sql  stg_teams.sql  stg_venues.sql
data-pipeline/docker/: dagster.yaml
data-pipeline/examples/: dbt_merge_workaround_equity.sql  dbt_merge_workaround_instrument.sql  dbt_python_atomic_merge.py
data-pipeline/quantfoot/: __init__.py
data-pipeline/quantfoot/assets/: __init__.py  dbt.py  leagues.py
data-pipeline/quantfoot/sources/: __init__.py
data-pipeline/quantfoot/sources/api_football/: __init__.py  client.py  raw_countries.py  raw_fixtures.py  raw_leagues.py  raw_players.py  raw_team_info.py  raw_team_seasons.py  raw_venues.py
infrastructure/docker/: docker-compose.yml
services/dotnet/: Fixtures.sln  QuantFoot.sln  Teams.sln  test-api.sh
(+72 files in other folders)
